@@ -1,5 +1,7 @@
 2020-12-12  Dirk Eddelbuettel  <edd@debian.org>
 
+	* local/scripts/CreateBoost.sh: Update for 1.75.0, added beast
+
 	* .github/workflows/ci.yaml: Add CI runner using r-ci
 
 2020-05-03  Dirk Eddelbuettel  <edd@debian.org>
@@ -44,7 +46,7 @@
 
 	* README.md: Updated package list for 1.72
 
-	* inst/include/boost/numeric/odeint/stepper/generation/: As before
+ 	* inst/include/boost/numeric/odeint/stepper/generation/: As before
 	rename karp54_classic.hpp to karp54_cl.hpp, adjust generation.hpp
 	* inst/include/boost/numeric/ublas/storage.hpp : Add missing include
 	for boost/serialization/array_wrapper.hpp
